se cambia cv en png por cv en pdf

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div><img src="./imágenes/dev.jpg" alt="ilustracion de mujer trabajando con pc" id="img-titulo"></div>
           <div class="titulo">
             <h1><b>Hola! Me llamo Erica y soy desarrolladora front-end.</b></h1>
-            <button><a download="cvErica" href="./imágenes/curriculum.png" class="btn-descarga">Descargar CV</a></button>
+            <button><a download="cvErica" href="./cvErica.pdf" class="btn-descarga">Descargar CV</a></button>
         </div>
       </header> 
       <main>
