se cambia mediaquery en sobre-mi

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <!-- carrousel -->
         <div class="container carrusel" > 
-          <div id="slidesfotos" class="carousel slide carousel-dark">
+          <div id="slidesfotos" class="carousel slide carousel-dark" >
               <div class="carousel-indicators barraslides" >
                   <button type="button" data-bs-target="#slidesfotos" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#slidesfotos" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -62,27 +62,51 @@
               <div class="carousel-inner">
                   <div class="carousel-item active">
                       <img src="./imágenes/html.jpg" class="d-block w-100" alt="ícono de html5">
+                      <div class="carousel-caption d-none d-md-block">
+                        <p>HTML5</p>
+                      </div>
                   </div>
                   <div class="carousel-item">
                       <img src="./imágenes/css.jpg" class="d-block w-100" alt="ícono de css">
+                      <div class="carousel-caption d-none d-md-block">
+                        <p>CSS3</p>
+                      </div>
                   </div>
                   <div class="carousel-item">
                       <img src="./imágenes/bootstrap-icon.jpg" class="d-block w-100" alt="ícono de bootstrap">
                   </div>
+                      <div class="carousel-caption d-none d-md-block">
+                    <p>BOOTSTRAP</p>
+                  </div>
                   <div class="carousel-item">
                       <img src="./imágenes/sass-icon.jpg" class="d-block w-100" alt="ícono de sass">
+                  </div>
+                  <div class="carousel-caption d-none d-md-block">
+                    <p>SASS</p>
                   </div>
                   <div class="carousel-item">
                       <img src="./imágenes/git-icon.jpg" class="d-block w-100" alt="ícono de git">
                   </div>
+                  <div class="carousel-caption d-none d-md-block">
+                    <p>GIT</p>
+                  </div>
                   <div class="carousel-item">
                     <img src="./imágenes/github-icon.jpg" class="d-block w-100" alt="ícono de gitHub">
+                  </div>
+                  <div class="carousel-caption d-none d-md-block">
+                    <p>GITHUB</p>
                   </div>
                   <div class="carousel-item">
                     <img src="./imágenes/seo-icon.jpg" class="d-block w-100" alt="ícono de lupa con palabra SEO">
                   </div>
+                  <div class="carousel-caption d-none d-md-block">
+                    <p>SEO</p>
+                  </div>
                   <div class="carousel-item">
                     <img src="./imágenes/javascript-icon.jpg" class="d-block w-100" alt="ícono de javascript">
+                  </div>
+                  <div class="carousel-caption d-none d-md-block">
+                    <p>JAVASCRIPT</p>
                   </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#slidesfotos" data-bs-slide="prev">
