--- a/index.html
+++ b/index.html
@@ -47,78 +47,76 @@
           <h2 id="subtitulo">Actualmente trabajo con estas tecnologías</h2>
         </div>
         <!-- carrousel -->
-        <div class="container carrusel" > 
-          <div id="slidesfotos" class="carousel slide carousel-dark" >
-              <div class="carousel-indicators barraslides" >
-                  <button type="button" data-bs-target="#slidesfotos" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#slidesfotos" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#slidesfotos" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                  <button type="button" data-bs-target="#slidesfotos" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                  <button type="button" data-bs-target="#slidesfotos" data-bs-slide-to="4" aria-label="Slide 5"></button>
-                  <button type="button" data-bs-target="#slidesfotos" data-bs-slide-to="5" aria-label="Slide 6"></button>
-                  <button type="button" data-bs-target="#slidesfotos" data-bs-slide-to="6" aria-label="Slide 7"></button>
-                  <button type="button" data-bs-target="#slidesfotos" data-bs-slide-to="7" aria-label="Slide 0"></button>
-              </div>
-              <div class="carousel-inner">
-                  <div class="carousel-item active">
-                      <img src="./imágenes/html.jpg" class="d-block w-100" alt="ícono de html5">
-                      <div class="carousel-caption d-none d-md-block">
-                        <p>HTML5</p>
-                      </div>
-                  </div>
-                  <div class="carousel-item">
-                      <img src="./imágenes/css.jpg" class="d-block w-100" alt="ícono de css">
-                      <div class="carousel-caption d-none d-md-block">
-                        <p>CSS3</p>
-                      </div>
-                  </div>
-                  <div class="carousel-item">
-                      <img src="./imágenes/bootstrap-icon.jpg" class="d-block w-100" alt="ícono de bootstrap">
-                  </div>
-                      <div class="carousel-caption d-none d-md-block">
-                    <p>BOOTSTRAP</p>
-                  </div>
-                  <div class="carousel-item">
-                      <img src="./imágenes/sass-icon.jpg" class="d-block w-100" alt="ícono de sass">
-                  </div>
-                  <div class="carousel-caption d-none d-md-block">
-                    <p>SASS</p>
-                  </div>
-                  <div class="carousel-item">
-                      <img src="./imágenes/git-icon.jpg" class="d-block w-100" alt="ícono de git">
-                  </div>
-                  <div class="carousel-caption d-none d-md-block">
-                    <p>GIT</p>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./imágenes/github-icon.jpg" class="d-block w-100" alt="ícono de gitHub">
-                  </div>
-                  <div class="carousel-caption d-none d-md-block">
-                    <p>GITHUB</p>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./imágenes/seo-icon.jpg" class="d-block w-100" alt="ícono de lupa con palabra SEO">
-                  </div>
-                  <div class="carousel-caption d-none d-md-block">
-                    <p>SEO</p>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./imágenes/javascript-icon.jpg" class="d-block w-100" alt="ícono de javascript">
-                  </div>
-                  <div class="carousel-caption d-none d-md-block">
-                    <p>JAVASCRIPT</p>
-                  </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#slidesfotos" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#slidesfotos" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-              </button>
+        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="5" aria-label="Slide 6"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="6" aria-label="Slide 7"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="7" aria-label="Slide 0"></button>
           </div>
-      </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="10000">
+              <img src="./imágenes/html.jpg" class="d-block w-100" alt="icono de html5">
+              <div class="carousel-caption d-none d-md-block">
+                <p>HTML5</p>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+              <img src="./imágenes/css.jpg" class="d-block w-100" alt="icono de css3">
+              <div class="carousel-caption d-none d-md-block">
+                <p>CSS3</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./imágenes/javascript-icon.jpg" class="d-block w-100" alt="icono de javascript">
+              <div class="carousel-caption d-none d-md-block">
+                <p>JAVASCRIPT</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./imágenes/bootstrap-icon.jpg" class="d-block w-100" alt="icono de bootstrap">
+              <div class="carousel-caption d-none d-md-block">
+                <p>BOOTSTRAP</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./imágenes/sass-icon.jpg" class="d-block w-100" alt="icono de sass">
+              <div class="carousel-caption d-none d-md-block">
+                <p>SASS</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./imágenes/git-icon.jpg" class="d-block w-100" alt="icono de git">
+              <div class="carousel-caption d-none d-md-block">
+                <p>GIT</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./imágenes/github-icon.jpg" class="d-block w-100" alt="icono de github">
+              <div class="carousel-caption d-none d-md-block">
+                <p>GITHUB</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./imágenes/seo-icon.jpg" class="d-block w-100" alt="icono de seo">
+              <div class="carousel-caption d-none d-md-block">
+                <p>SEO</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
       <section class="sobreMi" id="sobreMi">
       <div class="sobre-mi">
             <div>
