--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         
   
         <div class="encabezado">
-          <div><img src="./imágenes/dev.jpg" alt="ilustracion de mujer trabajando con pc" id="img-titulo"></div>
+          <div class="imagentit"><img src="./imágenes/dev.jpg" alt="ilustracion de mujer trabajando con pc" id="img-titulo"></div>
           <div class="titulo">
             <h1><b>Hola! Me llamo Erica y soy desarrolladora front-end.</b></h1>
             <button><a download="EricaCV" href="./EricaCV.pdf" class="btn-descarga">Descargar CV</a></button>
         </div>
       </header> 
       <main>
-        <div>
+        <div class="carrusel-tit">
           <h2 id="subtitulo">Actualmente trabajo con estas tecnologías</h2>
         </div>
         <!-- carrousel -->
