se modifica media queris carrusel

--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
           <h2 id="subtitulo">Actualmente trabajo con estas tecnologías</h2>
         </div>
         <!-- carrousel -->
+        <div class="container-fluid">
+
+        
      <div class="carrusel">
       <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
+        <div class="carousel-indicators d-none d-md-block">
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
@@ -126,6 +129,7 @@
         </button>
       </div>
      </div>
+    </div>
       <section class="sobreMi" id="sobreMi">
       <div class="sobre-mi">
             <div>
